webpage-style.css
body {
    background-image: url("img/background-xl-2.png");
    background-position: right;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    margin: 0;
    padding: 0;

}

html {
    width: 100vw;
    height: 100vh;
    margin: 0 !important;
    padding: 0 !important;
    scroll-behavior: smooth;
}

/*#main-container-small {*/
/*    width: 100vw;*/
/*    height: 100vh;*/
/*}*/

/*Small Nav Bar*/

#navbar-small {
    background-image: url("img/wood-small-nav.png");
    background-size: cover;
    color: white;
    width: 100vw;
    height: 50px;
    margin-bottom: 10px;
    border: 1px solid #7f7a6f;
    display: block;
    position: fixed;
    top: 0;
    left: 0;
}

.nav-li-small > a {
    color: #fffee8 !important;
    text-decoration: none;
    font-family: 'Neuton', serif;
    font-size: 1.75em;
}
#small-icon-mobile {
    width: 27%;
    height: auto;
    background-color: #fffee8;
    border-radius: 50%;
}

#icon-li-mobile {
   width: 150px;
}

#about-me-small, #technical-skills-small, #connect-small, #projects-small {
    font-family: 'Neuton', serif;
}

#about-me-anchor, #connect-anchor, #project-anchor{
    display: block;
    position: relative;
    top: -47px;
    visibility: hidden;
}


/*Page Content Small*/

#icon {
    width: auto;
    height: 100px;
    background-color: #fffee8;
    border-radius: 50%;
}

#about-me {
    margin-top: 50px;
    font-family: 'Lato', sans-serif;
}


#about-me, #connect {
    display: inline-block;
    border: 1px solid #8c8a7b;
    background-color: rgba(224, 200, 173, .5);
    width: 100vw;
    padding: 10px;
    margin: 15px;
    font-family: 'Lato', sans-serif;
}

#connect {
    margin-top: 15px;
}

#main-project {
    display: inline-block;
    border: 1px solid #8c8a7b;
    background-color: rgba(224, 200, 173, .5);
    width: 100vw;
    padding: 15px;
    font-family: 'Lato', sans-serif;
}

.outside-link > a {
    color: #0092b0;
}

.outside-link > a:visited{
    color: #8e3499;
}

.outside-link > a:hover {
    color: #ff9300;
}

.outside-link > a:active {
    color: #fe7920;
}

#weather-project, #coffee-project {

    display: inline-block;
    border: 1px solid #8c8a7b;
    background-color: #fffee8;
    width: 100%;
    /*height: 25vw;*/
    padding: 10px;
    /*margin-bottom: 10px;*/
    font-family: 'Lato', sans-serif;

}

#weather-img-car, #coffee-img-car, #coffee-img-car2 {
    width: 100%;
    height: auto;
}

/*Carousel */

.carousel-control-next-icon, .carousel-control-prev-icon {
    background-color: #8a3e05;
    border-radius: 30%;
    padding: 12%;
}

.carousel-control-prev, .carousel-control-next {
    width: 10vw;
}




/*Large Nav Bar*/

#sidebar {
    width: 200px;
    height: 100vh;
    background-size: contain;
    background-repeat: no-repeat;
    background-image: url("img/wood-slim.png");
    background-attachment: fixed;
    display: inline-block;
}

#navbar-section {
    background-color: rgba(224, 200, 173, .3);
    color: white;
    display: inline-block;
    position: fixed;
    left: 25px;
    border-radius: 10px;
    height: 97vh;
    width: 140px;
    margin-top: 10px;
}

.nav-li > a {
    color: white !important;
    text-decoration: none;
    font-family: 'Neuton', serif;
    font-size: 1.75em;
}

#sidebar-icon {
    width: 110px;
    height: auto;
    background-color: #fffee8;
    border-radius: 50%;
}

/*Large Content - middle-block*/

#main-container-large-projects {
    height: 100vh;
    width: 100vw;
    /*display: inline-block!important;*/
}

#carouselExampleCaptions-large {
    height: 100vh;
    width: 85vw;
}

#left-block {
    width: auto;
    height: 100vh;
}

#middle-block {
    width: auto;
    height: 100vh;
    overflow-y: hidden;
}
#name > h1 {
    font-size: 7em;
    font-family: 'Neuton', serif;
}

#tag-line {
    font-family: 'Neuton', serif;
    font-size: 3em;
}
#landing-page {
    display: inline-block;
    width: 87vw;
    height: 100vh;
    padding: 10px;
    margin-bottom: 15px;
}
#about-me-large, #connect-large, #projects-large {
    display: inline-block;
    border: 1px solid #8c8a7b;
    background-color: rgba(224, 200, 173, .5);
    width: 87vw;
    height: 100vh;
    padding: 10px;
    margin-bottom: 15px;
    font-family: 'Lato', sans-serif;
}

